--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ div{
     margin: 5px;
     padding: 10px 30px 10px 30px;
     width: 300px;
+    height: 700px;
 }
 div.contents{
     background-color: gold;
@@ -28,4 +29,13 @@ dl{
 dt#ootddt{
     color: red;
     text-decoration-line: underline;
+}
+div#iogin_form{
+    width: 500px;
+    text-align: center;
+    height: auto;
+}
+div#iogin_form input{
+    display: block;
+    margin: 10px;
 }
